force-app/main/default/objects/Monthly_Active_Members__c/Monthly_Active_Members__c.object-meta.xml
<CustomObject>
    <description
  >One row per calendar month holding the count of distinct active member Contacts that month, derived from Membership Opportunity date ranges by MembershipSnapshotBatch. Backs the Active Members Per Month dashboard line graph; standard reports cannot count span-memberships per period.</description>
    <label>Monthly Active Members</label>
    <nameField>
        <displayFormat>MAM-{0000}</displayFormat>
        <label>Monthly Active Members Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Monthly Active Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>