force-app/main/default/objects/Monthly_Active_Members__c/fields/Active_Member_Count__c.field-meta.xml
<CustomField>
    <fullName>Active_Member_Count__c</fullName>
    <description
  >Distinct member Contacts whose Membership Opportunity date range covered this month (Start &lt;= month end and End &gt;= month start).</description>
    <label>Active Member Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>