force-app/main/default/objects/Monthly_Active_Members__c/fields/Calculated_On__c.field-meta.xml
<CustomField>
    <fullName>Calculated_On__c</fullName>
    <description
  >When MembershipSnapshotBatch last computed this month's count. Shows freshness.</description>
    <label>Calculated On</label>
    <type>DateTime</type>
</CustomField>