force-app/main/default/objects/Monthly_Active_Members__c/fields/Snapshot_Key__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Key__c</fullName>
    <description
  >YYYY-MM key for the snapshot month. Unique external id so the batch upserts exactly one row per month (Date fields cannot be external ids).</description>
    <externalId>true</externalId>
    <label>Snapshot Key</label>
    <length>7</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>