force-app/main/default/objects/Monthly_Active_Members__c/fields/Snapshot_Month__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Month__c</fullName>
    <description
  >First day of the calendar month this snapshot represents. Used as the date grouping for the Active Members Per Month report/line graph.</description>
    <label>Snapshot Month</label>
    <required>true</required>
    <type>Date</type>
</CustomField>